1.删除无用资源 2.每个页面增加Title、description和keywords。

--- a/docs.html
+++ b/docs.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+  <title>DatenLord | 文档</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DatenLord</title>
+  <meta name="keywords" content="DatenLord,文档,Docs,快速开始,Quick Start,架构,Architecture,DatenLord Optimization Strategy,Target Usage Scenarios,deploy DatenLord,use DatenLord,Road Map">
+  <meta name="description" content="DatenLord文档页面，详细介绍了什么是DatenLord，为什么选择DatenLord，DatenLord的优化策略、使用场景，以及如何部署和使用DatenLord。">
   <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
   <link type="text/css" rel="styleSheet" href="./css/index.css?v=20211211" />
   <link type="text/css" rel="styleSheet" href="./css/reset.css?v=20211211" />
