--- a/en/docs.html
+++ b/en/docs.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+  <title>DatenLord | Docs</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DatenLord</title>
+  <meta name="keywords" content="DatenLord,Docs,Documentation,Quick Start,Architecture,DatenLord Optimization Strategy,Target Usage Scenarios,deploy DatenLord,use DatenLord,Road Map">
+  <meta name="description" content="The DatenLord document page describes in detail what DatenLord is, why DatenLord is selected, the optimization strategy and usage scenario of DatenLord, and how to deploy and use DatenLord.">
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon"/>
   <link type="text/css" rel="styleSheet" href="../css/index.css?v=20211211" />
   <link type="text/css" rel="styleSheet" href="../css/reset.css?v=20211211" />
