--- a/home.html
+++ b/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>DatenLord | 首页</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DatenLord</title>
+    <meta name="keywords" content="DatenLord,云原生,跨云服务,高性能缓存,高速网络,分布式存储,存储系统">
+    <meta name="description" content="DatenLord是新一代云原生分布式存储系统，具有跨云服务、高性能缓存、高速网络和分布式存储的特点。">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
     <link type="text/css" rel="styleSheet"  href="./css/index.css?v20211211" />
     <link type="text/css" rel="styleSheet"  href="./css/reset.css?v20211211" />
