--- a/join.html
+++ b/join.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+    <title>DatenLord | 加入我们</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DatenLord</title>
+    <meta name="keywords" content="加入我们,DatenLord招聘,RUST,FPGA,开发工程师,实习生,远程办公">
+    <meta name="description" content="DatenLord招聘，多个岗位虚位以待。远程办公，地点不限。期待您一起建设新一代云原生分布式存储系统。">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <link type="text/css" rel="styleSheet" href="./css/index.css?v=20211211" />
     <link type="text/css" rel="styleSheet" href="./css/reset.css?v=20211211" />
