--- a/en/home.html
+++ b/en/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>DatenLord | Homepage</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DatenLord</title>
+    <meta name="keywords" content="DatenLord,cloud-native,distributed storage system,Across Multiple Could Providers,High Performance Cache,High Speed Network">
+    <meta name="description" content="DatenLord is a new generation of cloud-native distributed storage system, which has the features of across multiple cloud providers, high-performance cache, high-speed network and distributed storage.">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon"/>
     <link type="text/css" rel="styleSheet"  href="../css/index.css?v=20211211" />
     <link type="text/css" rel="styleSheet"  href="../css/reset.css?v=20211211" />
