--- a/en/join.html
+++ b/en/join.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+    <title>DatenLord | Join us</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DatenLord</title>
+    <meta name="keywords" content="Join us,DatenLord Jobs,RUST,FPGA,Development Engineer,Trainee,Telecommuting">
+    <meta name="description" content="Datenlord recruitment. Telecommuting, unlimited location. We look forward to working with you to build a new generation of cloud native distributed storage system.">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
     <link type="text/css" rel="styleSheet" href="../css/index.css?v=20211211" />
     <link type="text/css" rel="styleSheet" href="../css/reset.css?v=20211211" />
