修改jquery为本地引入

--- a/join.html
+++ b/join.html
@@ -13,7 +13,7 @@
     <link type="text/css" rel="styleSheet" href="./css/reset.css?v=20211211" />
     <link type="text/css" rel="styleSheet" href="./css/main.css?v=20211211" />
     <link type="text/css" rel="styleSheet" href="./css/join.css?v=20211211" />
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.5.1.min.js"></script>
+	<script src="./js/jquery.js"></script>
 </head>
 
 <body>
