--- a/docs.html
+++ b/docs.html
@@ -13,7 +13,7 @@
   <link type="text/css" rel="styleSheet" href="./css/reset.css?v=20211211" />
   <link type="text/css" rel="styleSheet" href="./css/main.css?v=20211211" />
   <link rel="stylesheet" href="./css/vs2015.min.css">
-  <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.5.1.min.js"></script>
+  <script src="./js/jquery.js"></script>
   <script src="./js/highlight.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <style>
