--- a/en/home.html
+++ b/en/home.html
@@ -8,10 +8,10 @@
     <meta name="keywords" content="DatenLord,cloud-native,distributed storage system,Across Multiple Could Providers,High Performance Cache,High Speed Network">
     <meta name="description" content="DatenLord is a new generation of cloud-native distributed storage system, which has the features of across multiple cloud providers, high-performance cache, high-speed network and distributed storage.">
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon"/>
-    <link type="text/css" rel="styleSheet"  href="../css/index.css?v=20211211" />
-    <link type="text/css" rel="styleSheet"  href="../css/reset.css?v=20211211" />
-    <link type="text/css" rel="styleSheet"  href="../css/main.css?v=20211211" />
-    <link type="text/css" rel="styleSheet"  href="./mo_css/home.css?v=20211211" />
+    <link type="text/css" rel="styleSheet"  href="../css/index.css?v=20211214" />
+    <link type="text/css" rel="styleSheet"  href="../css/reset.css?v=20211214" />
+    <link type="text/css" rel="styleSheet"  href="../css/main.css?v=20211214" />
+    <link type="text/css" rel="styleSheet"  href="./mo_css/home.css?v=20211214" />
     <style>
         .content_box {
             width: 270px;
@@ -50,7 +50,6 @@
             margin-bottom: 88px;
             padding: 0 20px;
             font-size: 18px;
-            font-family: PingFangSC-Regular, PingFang SC;
             font-weight: 400;
             color: #000000;
             line-height: 26px;
@@ -72,9 +71,9 @@
             background-size: 100% 100%;
         }
 
-        .content_box:hover {
+        /* .content_box:hover {//暂时注释hover效果
             box-shadow: 0px 8px 20px 10px rgba(41, 93, 210, 0.6);
-        }
+        } */
     </style>
 </head>
 <body>
@@ -184,7 +183,7 @@
 
     </div>
 </div>
-<script type="text/javascript" src="../js/main.js?v=20211211"></script>
+<script type="text/javascript" src="../js/main.js?v=20211214"></script>
 <script>isIE();</script>
 </body>
 </html>
