--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <script>
         function toHome() {
-            window.location.href="./home.html";
+            window.location.href="./en/home.html";
         }
         toHome();
     </script>
